<resources>
    <string name="app_name">Калибровка весоизмерительных систем</string>

    <string name="title_calibrations">Список калибровок</string>
    <string name="title_scales">Весовые пункты</string>
    <string name="title_prefs">Настройки</string>
    <string name="title_about">О программе</string>

    <string name="dialog_title_add">Новая запись</string>
    <string name="dialog_title_update">Изменение записи</string>

    <string name="about_version">Версия</string>
    <string name="about_copyright" translatable="false">© П3тр0виЧъ</string>
    <string name="about_disclaimer">
        Приложение предоставляется на основе принципов «КАК ЕСТЬ» без каких-либо гарантий,
        то есть вы используете его на собственный риск и соглашаетесь с тем, что разработчик данного приложения
        не несёт никакой ответственности перед вами за какой-либо ущерб, включая потерю данных.
    </string>

    <string name="action_calibrations">Список калибровок</string>
    <string name="action_scales">Весовые пункты</string>
    <string name="action_settings">Настройки</string>
    <string name="action_about">О программе</string>

    <string name="action_save">Сохранить</string>

    <string name="action_update">Изменить</string>
    <string name="action_delete">Удалить</string>

    <string name="dialog_btn_cancel">ОТМЕНА</string>

    <string name="header_scale_name_and_id">Название (номер)</string>
    <string name="header_scale_type">Тип</string>
    <string name="header_scale_class">Класс точности</string>

    <string name="text_scale_name">Название</string>
    <string name="text_scale_id">Номер</string>
    <string name="text_scale_type">Тип</string>
    <string name="text_scale_class">Класс точности</string>
    <string name="text_scale_class_static">в статике</string>
    <string name="text_scale_class_dynamic">в динамике</string>

    <string name="item_scale_name_and_id">%1$s (%2$d)</string>
    <string name="item_scale_name_empty">Без названия</string>
    <string name="item_scale_class">%1$s/%2$s</string>

    <string name="item_scale_type_empty">Не указан</string>

    <string name="text_class_static_none">Нет</string>
    <string name="text_class_static_unknown">Другой (%d)</string>
    <string name="text_class_static_high">Высокий</string>
    <string name="text_class_static_medium">Средний</string>
    <string name="text_class_static_low">Низкий</string>

    <string-array name="spinner_class_static">
        <item>@string/text_class_static_none</item>
        <item>@string/text_class_static_high</item>
        <item>@string/text_class_static_medium</item>
        <item>@string/text_class_static_low</item>
    </string-array>

    <string name="text_class_dynamic_none">Нет</string>
    <string name="text_class_dynamic_unknown">Другой (%d)</string>
    <string name="text_class_dynamic_0_dot_5">0.5</string>
    <string name="text_class_dynamic_1">1</string>
    <string name="text_class_dynamic_2">2</string>

    <string-array name="spinner_class_dynamic">
        <item>@string/text_class_dynamic_none</item>
        <item>@string/text_class_dynamic_0_dot_5</item>
        <item>@string/text_class_dynamic_1</item>
        <item>@string/text_class_dynamic_2</item>
    </string-array>

    <string name="text_no_data">Нет записей</string>

    <string name="message_error_need_id">Необходимо указать номер весов</string>
    <string name="message_error_bad_id">Номер весов должен быть больше нуля</string>
    <string name="message_error_exists_id">Весы с номером %1$d (%2$s) уже существуют в базе данных</string>

    <string name="message_error_insert_record">Во время добавления записи произошла ошибка</string>
    <string name="message_error_update_record">Во время обновления записи произошла ошибка</string>
    <string name="message_error_delete_record">Во время удаления записи произошла ошибка</string>

    <string name="message_record_deleted">Запись удалена</string>

    <string name="sync_authority" translatable="false">ru.p3tr0vich.calibration.provider</string>
</resources>