<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recycler_view_header_height"
                android:descendantFocusability="blocksDescendants"
                android:orientation="horizontal"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

    <TextView
        android:id="@+id/text_name_and_id"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/space_btn_menu"
        android:gravity="center_vertical"
        android:text="@string/header_scale_name_and_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_name_and_id"
        android:layout_marginStart="16dp"
        android:layout_toStartOf="@+id/space_btn_menu"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/header_scale_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        <TextView
            android:id="@+id/text_class"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/header_scale_class"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
    </LinearLayout>

    <Space
        android:id="@+id/space_btn_menu"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>