<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="ru.p3tr0vich.calibration.utils.UtilsRecordFormat"/>

        <variable
            name="popupMenuPresenter"
            type="ru.p3tr0vich.calibration.presenters.PopupMenuPresenter"/>

        <variable
            name="scaleRecord"
            type="ru.p3tr0vich.calibration.models.ScaleRecord"/>
    </data>

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:clickable="false"
                    android:descendantFocusability="blocksDescendants"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

        <TextView
            android:id="@+id/text_name_and_id"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/btn_menu"
            android:clickable="false"
            android:gravity="bottom"
            android:text="@{UtilsRecordFormat.getScaleNameAndId(context, scaleRecord)}"
            android:textAppearance="@style/AppTheme.TextAppearance.List"
            tools:text="@string/header_scale_name_and_id"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@+id/btn_menu"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@{UtilsRecordFormat.getScaleType(context, scaleRecord)}"
                android:textAppearance="@style/AppTheme.TextAppearance.List"
                tools:text="@string/header_scale_type"/>

            <TextView
                android:id="@+id/text_class"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="top"
                android:text="@{UtilsRecordFormat.getScaleClass(context, scaleRecord)}"
                android:textAppearance="@style/AppTheme.TextAppearance.List"
                tools:text="@string/header_scale_class"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="48dp"
            android:layout_height="47dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_centerVertical="true"
            android:adjustViewBounds="false"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:onClick="@{(view) -> popupMenuPresenter.onClick(context, view, scaleRecord)}"
            android:src="@drawable/ic_dots_vertical"
            tools:ignore="ContentDescription"/>
    </RelativeLayout>
</layout>